# ploutos-pkg-demo

./: Cargo.toml  Dockerfile
.github/workflows/: pkg.yml
