[package]
name = "ploutos-pkg-demo"
version = "0.0.1"
edition = "2021"
authors = [ "Jisu-Woniu <31986081+Jisu-Woniu@users.noreply.github.com>" ]
license = "MIT"
description = "The Rust ploutos-pkg-demo tool."

[package.metadata.deb]
extended-description = "ploutos-pkg-demo"

[package.metadata.generate-rpm]
assets = [
  { source = "target/release/ploutos-pkg-demo", dest = "/usr/bin/ploutos-pkg-demo", mode = "755" },
]
